--- a/VoucherManagementSystem/Views/Vouchers/Create.cshtml
+++ b/VoucherManagementSystem/Views/Vouchers/Create.cshtml
@@ -268,18 +268,34 @@
                 }
             });
 
-            // Copy customer name to details
+            // Copy customer name to clipboard
             $('#copyPurchasingCustomerName').on('click', function() {
                 var selectedText = $('#purchasingCustomer option:selected').text();
                 if (selectedText && selectedText !== 'Select Customer') {
-                    $('#purchasingCustomerDetails').val(selectedText);
+                    navigator.clipboard.writeText(selectedText).then(function() {
+                        // Visual feedback
+                        var btn = $('#copyPurchasingCustomerName');
+                        var originalHTML = btn.html();
+                        btn.html('<i class="bi bi-check"></i>');
+                        setTimeout(function() {
+                            btn.html(originalHTML);
+                        }, 1000);
+                    });
                 }
             });
 
             $('#copyReceivingCustomerName').on('click', function() {
                 var selectedText = $('#receivingCustomer option:selected').text();
                 if (selectedText && selectedText !== 'Select Customer') {
-                    $('#receivingCustomerDetails').val(selectedText);
+                    navigator.clipboard.writeText(selectedText).then(function() {
+                        // Visual feedback
+                        var btn = $('#copyReceivingCustomerName');
+                        var originalHTML = btn.html();
+                        btn.html('<i class="bi bi-check"></i>');
+                        setTimeout(function() {
+                            btn.html(originalHTML);
+                        }, 1000);
+                    });
                 }
             });
         });
