--- a/VoucherManagementSystem/Views/Reports/ProfitLoss.cshtml
+++ b/VoucherManagementSystem/Views/Reports/ProfitLoss.cshtml
@@ -80,6 +80,43 @@
                 </div>
             </div>
         </div>
+
+        @{
+            var itemSummary = ViewBag.ItemSummary as List<VoucherManagementSystem.Controllers.ProjectItemSummary>;
+            if (itemSummary != null && itemSummary.Any())
+            {
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <h6 class="mb-2"><i class="bi bi-box-seam"></i> Item-wise Purchase & Sale Summary</h6>
+                        <div class="table-responsive">
+                            <table class="table table-sm table-bordered">
+                                <thead class="table-light">
+                                    <tr>
+                                        <th>Item Name</th>
+                                        <th class="text-center">Total Purchased</th>
+                                        <th class="text-center">Total Sold</th>
+                                        <th class="text-center">Stock Balance</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in itemSummary)
+                                    {
+                                        <tr>
+                                            <td>@item.ItemName</td>
+                                            <td class="text-center">@item.PurchaseQty.ToString("N2") @item.Unit</td>
+                                            <td class="text-center">@item.SaleQty.ToString("N2") @item.Unit</td>
+                                            <td class="text-center fw-bold @(item.StockQty > 0 ? "text-success" : item.StockQty < 0 ? "text-danger" : "")">
+                                                @item.StockQty.ToString("N2") @item.Unit
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
     </div>
 </div>
 
